sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__ungiven22/errors.duarouter
Error: Missing length definition in lane '2_1'.
Quitting (on error).
